turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:7: error: not found: value Couleur
    setCouleur(Couleur.BLUE);
               ^